--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ colorlog          # https://pypi.org/project/colorlog/
 # Pillow            # https://pypi.org/project/Pillow/
 # PyAutoGUI         # https://pypi.org/project/PyAutoGUI/
 # pytest            # https://pypi.org/project/pytest/
-# python-dotenv     # https://pypi.org/project/python-dotenv/
-# requests          # https://pypi.org/project/requests/
+python-dotenv     # https://pypi.org/project/python-dotenv/
+requests          # https://pypi.org/project/requests/
 # requests-file     # https://pypi.org/project/requests-file/
 # requests-html     # https://pypi.org/project/requests-html/
 # selenium          # https://pypi.org/project/selenium/
