--- a/cfg_data.ini
+++ b/cfg_data.ini
@@ -1,5 +1,5 @@
 [data_service]
+back_days = 5
 database = db.sqlite
-start_date = 2023-11-21
 symbol = EEM IWM LQD
 url_tiingo = https://api.tiingo.com/tiingo
