--- a/cfg_data.ini
+++ b/cfg_data.ini
@@ -1,5 +1,6 @@
 [data_service]
 back_days = 5
-database = db.sqlite
+database = data_service.db
 symbol = IWM LQD
+table = price volume
 url_tiingo = https://api.tiingo.com/tiingo
