--- a/cfg_data.ini
+++ b/cfg_data.ini
@@ -1,6 +1,6 @@
 [data_service]
 back_days = 5
 database = data_service.db
+frequency = daily
 symbol = IWM LQD
 table = price volume
-url_tiingo = https://api.tiingo.com/tiingo
