--- a/cfg_data.ini
+++ b/cfg_data.ini
@@ -1,6 +1,6 @@
 [data_service]
-back_days = 5
+back_days = 21
 database = data_service.db
 frequency = daily
-symbol = IWM LQD
+symbol = DBC FXI LQD
 table = clv price mass volume
